Fix links and integrated URLs for new items

--- a/web/templates/clients/client_details.html
+++ b/web/templates/clients/client_details.html
@@ -70,12 +70,11 @@
                 </div>
 
                 <div class="field">
-                    <label class="label">Tax Code (CUI
+                    <label class="label">Tax Code (CUI)
                         <div class="control">
                             <input class="input" type="text" id="cui" name="cui" value="{{ client_details.cui }}"
                                 readonly>
-                        </div>
-                        )
+                        </div>    
                     </label>
                 </div>
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
