--- a/web/templates/activity_reports/list.html
+++ b/web/templates/activity_reports/list.html
@@ -18,11 +18,11 @@
 
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-item is-active" style="color: #F2F2F2;" href="#">
+                    <a class="navbar-item is-active" style="color: #F2F2F2;" href="/clients">
                         Clients
                     </a>
 
-                    <a class="navbar-item" href="#">
+                    <a class="navbar-item" href="/invoices">
                         Invoices
                     </a>
                 </div>
@@ -54,9 +54,8 @@
             <nav class="breadcrumb" aria-label="breadcrumbs">
                 <ul>
                     <li><a href="/clients" aria-current="page">Clients</a></li>
-                    <!-- TODO: Add client ID dynamically -->
-                    <li><a href="/clients/2/contracts" aria-current="page">Contracts</a></li>
-                    <li><a href="/clients/2/contracts/1/wo" aria-current="page">Work Orders</a></li>
+                    <li><a href="../../" aria-current="page">Contracts</a></li>
+                    <li><a href="../" aria-current="page">Work Orders</a></li>
                     <li class="is-active"><a href="#" aria-current="page">Activity Reports</a></li>
                 </ul>
             </nav>
