--- a/web/templates/clients/new_client.html
+++ b/web/templates/clients/new_client.html
@@ -27,7 +27,7 @@
             </div>
             {% endif %}
 
-            <form action="/clients/add" method="post" class="box">
+            <form action="add" method="post" class="box">
                 <div class="field">
                     <label class="label" for="name">Name *
                         <div class="control">
@@ -84,6 +84,20 @@
                     <label class="label">Tax Code (CUI) *
                         <div class="control">
                             <input class="input" type="text" placeholder="6859662" id="cui" name="cui" required>
+                        </div>
+                    </label>
+                </div>
+                <div class="field">
+                    <label class="label">Work Order Sign URL
+                        <div class="control">
+                            <input class="input" type="text" placeholder="https://sign.adobe.com/abc" id="wo_sign_template" name="wo_sign_template">
+                        </div>
+                    </label>
+                </div>
+                <div class="field">
+                    <label class="label">Acceptance Report Sign URL
+                        <div class="control">
+                            <input class="input" type="text" placeholder="https://sign.adobe.com/abc" id="pv_sign_template" name="pv_sign_template">
                         </div>
                     </label>
                 </div>
