--- a/web/templates/work_orders/list.html
+++ b/web/templates/work_orders/list.html
@@ -18,11 +18,11 @@
 
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-item is-active" style="color: #F2F2F2;" href="#">
+                    <a class="navbar-item is-active" style="color: #F2F2F2;" href="/clients">
                         Clients
                     </a>
 
-                    <a class="navbar-item" href="#">
+                    <a class="navbar-item" href="/invoices">
                         Invoices
                     </a>
                 </div>
@@ -54,14 +54,13 @@
             <nav class="breadcrumb" aria-label="breadcrumbs">
                 <ul>
                     <li><a href="/clients" aria-current="page">Clients</a></li>
-                    <!-- TODO: Add client ID dynamically -->
-                    <li><a href="/clients/2/contracts" aria-current="page">Contracts</a></li>
+                    <li><a href="/clients/{{ client_id }}/contracts" aria-current="page">Contracts</a></li>
                     <li class="is-active"><a href="#" aria-current="page">Work Orders</a></li>
                 </ul>
             </nav>
             <hr>
             <div class="buttons is-right">
-                <a class="button is-primary" href="/clients/{{ client_id }}/contracts/{{ contract_id }}/wo/add">Add</a>
+                <a class="button is-primary" href="wo/add">Add</a>
             </div>
             <table class="table is-hoverable is-fullwidth">
                 <thead>
